--- a/app_online.plist
+++ b/app_online.plist
@@ -16,7 +16,7 @@
 				<key>metadata</key>
 				<dict>
 					<key>bundle-identifier</key>
-					<string>com.kzsvvg.koppkvw</string>
+					<string>com.kingkr.bianselong</string>
 					<key>bundle-version</key>
 					<string>1.0.0</string>
 					<key>kind</key>
